--- a/client/package.json
+++ b/client/package.json
@@ -13,12 +13,19 @@
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.0.1",
+    "react-modal": "^3.16.1",
     "react-router-dom": "^6.21.1",
     "react-scripts": "^5.0.1",
     "socket.io-client": "^4.7.4",
     "styled-components": "^6.1.6",
     "web-vitals": "^2.1.4"
   },
+    "devDependencies": {
+      "@babel/plugin-proposal-private-property-in-object": "^1.0.0"
+      
+    },
+ 
+  
   "scripts": {
     "start": "react-scripts --openssl-legacy-provider start",
     "build": "react-scripts --openssl-legacy-provider build",
